--- a/Graficacion/Practica01/Epicicloide/index.html
+++ b/Graficacion/Practica01/Epicicloide/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cicloides</title>
+    <title>Epicicloides</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Righteous&display=swap"
@@ -13,7 +13,7 @@
   <body>
     <div id="page-container">
       <div id="content-wrap">
-        <h1>Cicloides</h1>
+        <h1>Epicicloides</h1>
         <div class="container">
           <canvas id="myCanvas" width="800" height="600"></canvas>
         </div>
