--- a/Graficacion/Final/index.html
+++ b/Graficacion/Final/index.html
@@ -10,25 +10,43 @@
 <body>
   <canvas id="the_canvas" width="800" height="600"></canvas><br>
 
-  <input type="checkbox" id="ortogonal">
-  <label for="ortogonal">Vista Ortogonal</label>
+  <div>
+    <input type="checkbox" id="ortogonal">
+    <label for="ortogonal">Vista Ortogonal</label>
+    <input type="checkbox" id="cambiar_camara">
+    <label for="cambiar_camara">Cambiar a camara 2</label>
+    <input type="checkbox" id="luz">
+    <label for="luz">Encender Luz </label>
+    <input type="checkbox" id="animacion_luz">
+    <label for="animacion_luz">Iniciar/detener animacion de luz </label>
+  </div>
 
-  <input type="checkbox" id="cambiar_camara">
-  <label for="cambiar_camara">Cambiar a camara 2</label>
+  <div>
+    <h2>Luz direccional</h2>
+    <input type="number" id="luz_posX" value="0">
+    <label for="luz_posX">Introduce la posicion de la luz X</label>
+    <input type="number" id="luz_posY" value="50">
+    <label for="luz_posY">Introduce la posicion de la luz Y</label>
+    <input type="number" id="luz_posZ" value="0">
+    <label for="luz_posZ">Introduce la posicion de la luz Z</label>
+  </div>
 
-  <input type="checkbox" id="luz">
-  <label for="luz">Encender Luz </label>
+  <div>
+    <h2>Luz de reflector (Aquí puede modificar parametros mientras la animación esta activa)</h2>
+    <input type="number" id="reflector_luz_posX" value="0">
+    <label for="reflector_luz_posX">Introduce la posicion de la luz X</label>
+    <input type="number" id="reflector_luz_posY" value="10">
+    <label for="reflector_luz_posY">Introduce la posicion de la luz Y</label>
+    <input type="number" id="reflector_luz_posZ" value="50">
+    <label for="reflector_luz_posZ">Introduce la posicion de la luz Z</label>
+  </div>
 
-  <input type="number" id="luz_posX">
-  <label for="luz_posX">Introduce la posicion de la luz X</label>
-
-  <input type="number" id="luz_posZ">
-  <label for="luz_posZ">Introduce la posicion de la luz Z</label>
 
   Controles awsd para moverse
   p/o para panear
   x para alejar y z para zoom
   b para ver el skybox desde afuera
+
   <!-- Programas para iluminacion difusa -->
   <script id="difuse_2d-vertex-shader" type="vertex-shader">
       precision mediump float;
