Solo falta reparar vista ortogonal

--- a/Graficacion/Final/index.html
+++ b/Graficacion/Final/index.html
@@ -17,17 +17,23 @@
     <label for="cambiar_camara">Cambiar a camara 2</label>
     <input type="checkbox" id="luz">
     <label for="luz">Encender Luz </label>
+  </div>
+
+  <div>
+    <h2>Animaciones y recorrido autonomo</h2>
     <input type="checkbox" id="animacion_luz">
     <label for="animacion_luz">Iniciar/detener animacion de luz </label>
+    <input type="checkbox" id="recorrido">
+    <label for="recorrido">Iniciar/detener recorrido autonomo</label>
   </div>
 
   <div>
     <h2>Luz direccional</h2>
     <input type="number" id="luz_posX" value="0">
     <label for="luz_posX">Introduce la posicion de la luz X</label>
-    <input type="number" id="luz_posY" value="50">
+    <input type="number" id="luz_posY" value="10">
     <label for="luz_posY">Introduce la posicion de la luz Y</label>
-    <input type="number" id="luz_posZ" value="0">
+    <input type="number" id="luz_posZ" value="-50">
     <label for="luz_posZ">Introduce la posicion de la luz Z</label>
   </div>
 
@@ -35,7 +41,7 @@
     <h2>Luz de reflector (Aquí puede modificar parametros mientras la animación esta activa)</h2>
     <input type="number" id="reflector_luz_posX" value="0">
     <label for="reflector_luz_posX">Introduce la posicion de la luz X</label>
-    <input type="number" id="reflector_luz_posY" value="10">
+    <input type="number" id="reflector_luz_posY" value="1">
     <label for="reflector_luz_posY">Introduce la posicion de la luz Y</label>
     <input type="number" id="reflector_luz_posZ" value="50">
     <label for="reflector_luz_posZ">Introduce la posicion de la luz Z</label>
