--- a/Graficacion/Final/index.html
+++ b/Graficacion/Final/index.html
@@ -3,55 +3,66 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Page Title</title>
+  <title>Proyecto Final | Graficación</title>
   <script type="module" src="./js/Main.js"></script>
+  <link rel="stylesheet" type="text/css" href="./css/index.css">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <canvas id="the_canvas" width="800" height="600"></canvas><br>
 
-  <div>
-    <input type="checkbox" id="ortogonal">
-    <label for="ortogonal">Vista Ortogonal</label>
-    <input type="checkbox" id="cambiar_camara">
-    <label for="cambiar_camara">Cambiar a camara 2</label>
-    <input type="checkbox" id="luz">
-    <label for="luz">Encender Luz </label>
+  <h1>Proyecto Final Graficación por Computadora 2020-2</h1>
+
+  <div id="container">
+
+    <canvas id="the_canvas" height="425"></canvas>
+
+    <div id="controles">
+      <div class="checkbox">
+        <h3>Controles y camaras</h3>
+        <input type="checkbox" id="ortogonal">
+        <label for="ortogonal">Vista Ortogonal (NOT)</label><br>
+        <input type="checkbox" id="cambiar_camara">
+        <label for="cambiar_camara">Cambiar a camara 2</label><br>
+        <input type="checkbox" id="luz">
+        <label for="luz">Encender Luz </label><br>
+      </div>
+
+      <div class="checkbox">
+        <h3>Animaciones</h3>
+        <input type="checkbox" id="animacion_luz">
+        <label for="animacion_luz">Animación luz</label><br>
+        <input type="checkbox" id="recorrido">
+        <label for="recorrido">Recorrido autónomo</label><br>
+      </div>
+
+
+      <div>
+        <h3>Luz direccional</h3>
+        <label for="luz_posX">Introduce la posicion de la luz X</label>
+        <input type="number" id="luz_posX" value="0"><br>
+        <label for="luz_posY">Introduce la posicion de la luz Y</label>
+        <input type="number" id="luz_posY" value="10"><br>
+        <label for="luz_posZ">Introduce la posicion de la luz Z</label>
+        <input type="number" id="luz_posZ" value="-50"><br>
+      </div>
+
+      <div>
+        <h3>Luz de reflector</h3>
+        <label for="reflector_luz_posX">Introduce la posicion de la luz X</label>
+        <input type="number" id="reflector_luz_posX" value="0"><br>
+        <label for="reflector_luz_posY">Introduce la posicion de la luz Y</label>
+        <input type="number" id="reflector_luz_posY" value="1"><br>
+        <label for="reflector_luz_posZ">Introduce la posicion de la luz Z</label>
+        <input type="number" id="reflector_luz_posZ" value="50"><br>
+      </div>
+    </div>
   </div>
 
-  <div>
-    <h2>Animaciones y recorrido autonomo</h2>
-    <input type="checkbox" id="animacion_luz">
-    <label for="animacion_luz">Iniciar/detener animacion de luz </label>
-    <input type="checkbox" id="recorrido">
-    <label for="recorrido">Iniciar/detener recorrido autonomo</label>
-  </div>
 
-  <div>
-    <h2>Luz direccional</h2>
-    <input type="number" id="luz_posX" value="0">
-    <label for="luz_posX">Introduce la posicion de la luz X</label>
-    <input type="number" id="luz_posY" value="10">
-    <label for="luz_posY">Introduce la posicion de la luz Y</label>
-    <input type="number" id="luz_posZ" value="-50">
-    <label for="luz_posZ">Introduce la posicion de la luz Z</label>
-  </div>
+  <p>Flechas de direccion | WASD | "p" u "o" para hacer un paneo | "z" para Zoom y "x" para alejar |
+    Pulsa "b" para ver el skybox desde fuera</p>
 
-  <div>
-    <h2>Luz de reflector (Aquí puede modificar parametros mientras la animación esta activa)</h2>
-    <input type="number" id="reflector_luz_posX" value="0">
-    <label for="reflector_luz_posX">Introduce la posicion de la luz X</label>
-    <input type="number" id="reflector_luz_posY" value="1">
-    <label for="reflector_luz_posY">Introduce la posicion de la luz Y</label>
-    <input type="number" id="reflector_luz_posZ" value="50">
-    <label for="reflector_luz_posZ">Introduce la posicion de la luz Z</label>
-  </div>
-
-
-  Controles awsd para moverse
-  p/o para panear
-  x para alejar y z para zoom
-  b para ver el skybox desde afuera
 
   <!-- Programas para iluminacion difusa -->
   <script id="difuse_2d-vertex-shader" type="vertex-shader">
